--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: # the website title (if blank, full name will be used instead)
+title: Huan Zhang# the website title (if blank, full name will be used instead)
 first_name: Huan
 middle_name: 
 last_name: Zhang
