--- a/_config.yml
+++ b/_config.yml
@@ -166,7 +166,7 @@ external_sources:
 # -----------------------------------------------------------------------------
 
 collections:
-  News:
+  news:
     defaults:
       layout: post
     output: true
