--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,13 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
-
+      value: Huan Zhang
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Bachelor's in Computer Science
+      institution: University of Waterloo
+      year: 2023
       description:
         - Description 1.
         - Description 2.
@@ -21,13 +16,6 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
-
 - title: Experience
   type: time_table
   contents:
