--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -19,14 +19,14 @@
     - title: Software Engineer Intern
       institution: FunPlus
       year: 2021.6 - 2021.12
-    - title: Project Manager Interb
+    - title: Project Manager Intern
       institution: Netease
       year: 2021.2 - 2021.6
     - title: Software Engineer Intern
       institution: Roborock
       year: 2020.9 - 2020.12
     - title: Software Engineer Intern
-      institution: Roborock
+      institution: Amazon Web Service
       year: 2019.3 - 2019.7
 
 # - title: Open Source Projects
@@ -62,4 +62,4 @@
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - Apart from studying, I love hiking, photography, drawing, coffee:）
