--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,9 +13,13 @@
     - title: Research Intern
       institution: MILA
       year: 2023.3 - Present
+      description:
+        - supervisor: Prof.Bang Liu
     - title: Research Intern
       institution: WatVis @ University of Waterloo
       year: 2022.5 - Present
+      description:
+        - supervisor: Prof.Jian Zhao
     - title: Software Engineer Intern
       institution: FunPlus
       year: 2021.6 - 2021.12
