--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your 
 
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 💗  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: 🐈  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://Eleanor825.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
