--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Machine Learning Research Scientist at Ford Autonomy, working on Perception and Prediction for autonomous driving tasks.
 twitter_username: im_lilyz
 github_username: alchemz
-minimal_mistakes_skin: default
+minimal_mistakes_skin: dirt
 search: false
 
 # Build settings
